<resources>
    <string name="app_name">KeepFit</string>
    <string name="personal_information_one">完善资料1/2</string>
    <string name="personal_information_two">完善资料2/2</string>
    <string name="next">下一步</string>
    <string name="girl">女</string>
    <string name="boy">男</string>
    <string name="nick">昵称</string>
    <string name="birthday">生日</string>
    <string name="height">身高</string>
    <string name="please_write_nick">请填写昵称</string>
    <string name="please_write_birthday">请填写生日</string>
    <string name="please_write_height">请填写身高</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="cm">厘米</string>
    <string name="weight">体重</string>
    <string name="plan_weight">目标体重</string>
    <string name="now_weight">当前体重</string>
    <string name="kg">千克</string>
    <string name="length">步长</string>
    <string name="steps">步数</string>
    <string name="default_weight">50千克</string>
    <string name="default_weight_values">50</string>
    <string name="default_length_values">70</string>
    <string name="default_length">70千克</string>
    <string name="walk">先去逛逛</string>
    <string name="make_a_plan">制定计划</string>
    <string name="sport_txt">运动</string>
    <string name="class_txt">课程</string>
    <string name="find_txt">发现</string>
    <string name="heart_txt">心率</string>
    <string name="mine_txt">我的</string>
    <string name="target">健身目标</string>
    <string name="finish">完成</string>
    <string name="start_time">开始时间</string>
    <string name="stop_time">结束时间</string>
    <string name="set_start_time">请设置开始时间</string>
    <string name="set_stop_time">请设置结束时间</string>
    <string name="normal_weight_range">※您的健康体重范围应为：</string>
    <string name="warm_up">热身</string>
    <string name="mileage">0.00公里</string>
    <string name="heat">0.00大卡</string>
    <string name="km">公里</string>
    <string name="cal">大卡</string>
    <string name="city">城市：</string>
    <string name="city_name">城市：北京</string>
    <string name="temperature">温度：28℃</string>
    <string name="air_quality">空气质量：良</string>
    <string name="temperature_hint">温度：</string>
    <string name="temperature_unit">℃</string>
    <string name="quality">空气质量：</string>
    <string name="sport_history">运动历史</string>
    <string name="heathly">健康记录</string>
    <string name="about">关于我们</string>
    <string name="change_image">修改头像</string>
    <string name="change_nick">修改昵称</string>
    <string name="change_gender">修改性别</string>
    <string name="change_date">修改生日</string>
    <string name="default_date">2012-12-21</string>
    <string name="change_height">修改身高</string>
    <string name="change_length">修改步长</string>
    <string name="change_weight">修改体重</string>
    <string name="ok">确定</string>
    <string name="back">返回</string>
    <string name="dialog_title">设置计划</string>
    <string name="http">QQ：4006751066</string>
    <string name="tel">电话：0431-84978981</string>
    <string name="email">邮箱:mingrisoft@mingrisoft.com</string>
    <string name="all">累计数据</string>
    <string name="find_day">记录列表</string>
    <string name="company">吉林省明日科技有限公司版权所有</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
